# RustMud

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  Running.md
.claude/commands/: room-building.md
agent_actions/: 2026-06-12.md  log.md
data/buildings/: firstfall.json  perihelion_bay.json  shuttle_perihelion.json
data/world/: map.txt
data/zones/: 001_town.json  002_forest.json  003_debris.json  004_coast.json  005_interior.json
design/: character-creation.md  classes.md  crafting.md  economy.md  environment-manipulation.md  firstfall.md  fixtures.md  llm-integration.md  objects.md  olc.md  player-stats.md  races.md  socials.md  world-building.md  world-map.md  world-structure.md
docs/: adding-commands.md  architecture.md
lore/: biology-fauna.md  biology-flora.md  biology-genetics.md  coherence-field.md  colonists.md  corporate.md  history.md  index.md  perihelion.md  precursors.md  the-arrival.md  the-eye.md
memory/: MEMORY.md  design_npc_ai.md  design_power.md  design_progression.md  lore_biology.md  lore_world.md
planning/: roadmap.md  theme-lore.md
src/: color.rs  game.rs  lib.rs  main.rs  persist.rs  proto.rs
src/commands/: mod.rs  registry.rs
src/mob/: core.rs  mod.rs  monster.rs  npc.rs  player.rs
src/world/: area.rs  fixture.rs  hex.rs  loader.rs  mob_gen.rs  mob_template.rs  mod.rs  object.rs  room.rs  worldmap.rs  zone.rs
worldgen/: azgaar_parse.py  heightmap_gen.py  pyvenv.cfg  world_cells.json  world_features.json  world_rivers.json  world_summary.json
