[package]
name = "rustmud"
version = "0.1.0"
edition = "2024"
default-run = "rustmud"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tokio = { version = "1", features = ["full"] }
argon2 = { version = "0.5", features = ["std"] }
uuid   = { version = "1",   features = ["v4", "serde"] }
